# libcamera_meme

./: CMakeLists.txt
driver/: CMakeLists.txt
driver/inc/: camera_runner.h  gl_hsv_thresholder.h
driver/src/: camera_grabber.cpp  camera_runner.cpp
example/: CMakeLists.txt
example/gui/src/: MainApp.cpp  main.cpp
example/simple/: main.cpp
